tests/error/functions-3.moc
void main() {
    print(42);
}
